--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
 <input type='password'  class="pass">
 <button class="btn">submitt</button>
 
+
+
+<nav>
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+       
+    </ul>
+</nav>
+
     <script src="js/script.js"></script>
 </body>
 </html>
